login regis upload

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,9 @@
         <activity android:name=".Mitra.HomeMitraActivity" />
         <activity android:name=".Konsumen.Home"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".MenuPilihanMitraActivity"/>
+        <activity android:name=".MitraBadanUsaha.DaftarMitraBuActivity"/>
+
 
     </application>
 
