--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 
     implementation "com.airbnb.android:lottie:$lottie_version"
 
+    implementation "com.github.bumptech.glide:glide:3.7.0"
+
 
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.code.gson:gson:2.6.2'
