--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0-rc01'
 
+    implementation 'com.synnapps:carouselview:0.1.4'
+
     implementation "com.airbnb.android:lottie:$lottie_version"
 
     implementation "com.github.bumptech.glide:glide:3.7.0"
