--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 
     implementation 'com.synnapps:carouselview:0.1.4'
 
+    implementation 'com.github.nanashiKey:ReadyLibs:e084f9b40c'
+
     implementation "com.airbnb.android:lottie:$lottie_version"
 
     implementation "com.github.bumptech.glide:glide:3.7.0"
@@ -49,6 +51,20 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.0.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.0'
+
+    // Google MAPS
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
+
+    // Auto Complete Place & location
+    implementation 'com.google.android.gms:play-services-places:11.8.0'
+
+    implementation 'com.google.android.gms:play-services-location:11.8.0'
+
+//    implementation 'com.google.android.libraries.places:places:1.0.0'
+
+    // Maps Utils
+    implementation 'com.google.maps.android:android-maps-utils:0.4+'
+
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
