--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
 
+<!--        <service-->
+<!--            android:name=".FetchAddressIntentService"-->
+<!--            android:exported="false"/>-->
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key"/>
@@ -62,6 +66,7 @@
         <activity android:name=".MitraBadanUsaha.DaftarMitraBuActivity"/>
         <activity android:name=".Konsumen.RenovKonsumenActivity"/>
         <activity android:name=".Konsumen.MapsActivity"/>
+        <activity android:name=".Konsumen.OrderRenovActivity"/>
 
 
     </application>
