--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CAMERA"/>
@@ -67,6 +68,7 @@
         <activity android:name=".Konsumen.RenovKonsumenActivity"/>
         <activity android:name=".Konsumen.MapsActivity"/>
         <activity android:name=".Konsumen.OrderRenovActivity"/>
+        <activity android:name=".Konsumen.OrderRenovRetroActivity"/>
 
 
 
